--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                             <h4>I am Naimul</h4>
                         </div>
                         <p class="home-description">
-                            Hi, I am Naimul, student and businessman from Dhaka, Bangladesh. I am passionate about graphics & web design, development and business. I really love what I do.
+                            Hi, I am Naimul, a always learner from Dhaka, Bangladesh. Professionally I found myself young, energetic, honest, candor, open-minded, responsible,
+dedicated and persuasive. I believe in hard work, which can lead to maximum success. I made myself
+out spoken, outgoing with my friends and peers. I really love what I do.
                         </p>
                         <div class="btn-group-vertical custom_btn animated slideinright">
                             <div id="about" class="btn btn-rabbit">About</div>
@@ -65,9 +67,9 @@
                             <h2 class="page-title" text-center>About</h2>
                             <div class="marker">a</div>
                         </div>
-                        <p class='subtitle'>Hi, I am Md. Naimul Hassan. I would like to talk about business opportunity.
+                        <p class='subtitle'>Hi, I am Md. Naimul Hassan. I would like to talk about opportunity.
                         </p>
-                        <p class="info">"I was born and grow up in Tangail. Struggling to be a freelancer and business owner. I have interest to travel various destination. I want to be a freelance web designer, front-end developer and digital planner based in BD."</p>  
+                        <p class="info">"I was born and grow up in Tangail. Struggling to be a someone. I have interest to travel various destination."</p>  
                     </div>
                 </div>
             </div>            
@@ -92,7 +94,7 @@
                             <h2 class="page-title" text-center>Work</h2>
                             <div class="marker">w</div>
                         </div>
-                        <p class='subtitle'>This is a selection of my design and development work. I've been involve in many different types of project.
+                        <p class='subtitle'>This is a selection of my work. I've been involve in many different types of project.
                         </p>
                         <p class="info">"I've completed my BBA and MBA from National University, Bangladesh in major Accounting. I have sound knowledge in HTML, CSS, python, graphic design, font development and video making. I make vieo on youtube. My youtube channel name is <a href="https://youtube.com/c/DORPON">DORPON</a>. I would request you to visit it. Thank you very much."
                         </p>
