--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ out spoken, outgoing with my friends and peers. I really love what I do.
                             <div id="contact" class="btn btn-rabbit">Contact</div>
                         </div>      
                         <div class="social">
+                            <a href="https://linkedin.com/in/iam-naimul"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                             <a href="https://facebook.com/iam.naimul"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                             <a href="https://twitter.com/iam_naimul"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                             <a href="https://youtube.com/c/DORPON"><i class="fa fa-youtube" aria-hidden="true"></i></a>
