--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
                             <h4>I am Naimul</h4>
                         </div>
                         <p class="home-description">
-                            Hi, I am Naimul, a always learner from Dhaka, Bangladesh. Professionally I found myself young, energetic, honest, candor, open-minded, responsible,
-dedicated and persuasive. I believe in hard work, which can lead to maximum success. I made myself
-out spoken, outgoing with my friends and peers. I really love what I do.
+                            Hi, I am Naimul, a always learner from Dhaka, Bangladesh. Professionally I found myself young, energetic, honest, candor, open-minded, responsible, dedicated and persuasive. I believe in hard work, which can lead to maximum success. I made myself out spoken, outgoing with my friends and peers. I really love what I do.
                         </p>
                         <div class="btn-group-vertical custom_btn animated slideinright">
                             <div id="about" class="btn btn-rabbit">About</div>
